client/web/web/media/style/menu.css
#menuContainer {
	position: fixed;
	top: -33%;
	left: 0;
	z-index: 1000;
	width: 100%;
	height: 33%;
	background: rgba(0,0,0,0.8);
}

#menuContainer_main {
	width: 100%;
	height: 100%;
	box-sizing: border-box;
	padding: 10px;
	overflow-y: auto;
	color: #999;
	font-weight: bold;
}

.menuContainer_entry {
	float: left;
	box-sizing: border-box;
	width: 20%;
	height: 95%;
	padding: 10px;
}

.menuContainer_entry h3 {
	height: 15%;
	padding: 0;
	margin: 0;
}

.menuContainer_control {
	width: 100%;
	height: 85%;
}

#menuContainer_bottom {
	width: 60px;
	height: 17px;
	margin: 0 auto;
	background: rgba(0,0,0,0.8);
	text-align: center;
	color: #999;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
}

#menuContainer_bottom:hover, #menuContainer_bottom.glow {
	font-size:120%;
	font-weight: bold;
	color: #FFF;
	text-shadow:0px 0px 20px #FFF;
}

